--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -10,7 +10,10 @@
 
   <title>Document</title>
 </head>
-<body class="bg-dark container ">
+<body class="bg-dark container">
+
+  <h1>Toby Edgar</h1>
+
   <div id="heading">
     <h1 class="text-light py-4 px-5 rounded-pill">Portfolio</h1>
   </div>
