--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -32,6 +32,7 @@
   <div id="homePage" class="py-5 px-5">
   <h2 class="text-light">Home page</h2>
   <p class="text-light">This app will enable the user to store, edit and delete their products, if they are have admin privileges. Otherwise all visitors of this app can view the products. </p>
+  <a href="admin.html">See admin panel</a>
   </div>
 
   <!-- view page -->
