added delete function

--- a/frontEnd/admin.html
+++ b/frontEnd/admin.html
@@ -90,7 +90,14 @@
     <!-- List of projects begins -->
     <div id="projectList" class='my-5'>
       <!-- Projects injected here -->
-    </div>
+      <!-- <div class="project-strip">
+          <div class='project-list-title'>${projectsFromMongo[i].title}</div>
+          <div class='project-list-date'>21.08.21</div>
+          <div class='up-del'>
+      <i class="fas fa-pen"></i>
+      <i class="fas fa-trash"></i>
+          </div>
+    </div> -->
   </div>
 
 
