--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -17,16 +17,11 @@
   </div>
 
 <nav class="mt-5">
-
         <button id="home" type="button" name="button" class="btn btn-primary btn-md mr-3 rounded-pill"><a class="text-light"  href="home.html">Home</a></button>
-
-        <button id="view" type="button" name="button" class="btn btn-primary btn-md mr-3 rounded-pill">View</button>
-
-        <button id="admin" type="button" name="button" class="btn btn-primary btn-md mr-3 rounded-pill">Admin</button>
-  </nav>
+</nav>
 
   <!-- home page -->
-  <div class="homePage" class="py-5 px-5">
+  <div class="homePage bg-dark" class="py-5 px-5">
   <h2 class="text-light">Home page</h2>
   <p class="text-light">This app will enable the user to store, edit and delete their products, if they are have admin privileges. Otherwise all visitors of this app can view the products. </p>
   <a href="admin.html">See admin panel</a>
@@ -141,12 +136,9 @@
   </script>
   <!-- <script src="js/config.js">
   </script> -->
-<<<<<<< HEAD
   <script src="js/script.js">
-=======
-  <script src="js/script2.js">
-
->>>>>>> e52db0b3511a58338d89f82e7f8e686402b92597
   </script>
+  <!-- // <script src="js/script2.js"> -->
+
 </body>
 </html>
