--- a/frontEnd/indexKris.html
+++ b/frontEnd/indexKris.html
@@ -145,8 +145,9 @@
 
   </script>
   <!-- <script src="js/config.js">
+
   </script> -->
-  <script src="js/script2.js">
+  <script src="js/script.js">
 
   </script>
 </body>
