--- a/frontEnd/home.html
+++ b/frontEnd/home.html
@@ -21,28 +21,23 @@
     <a class="link-admin" href="admin.html">Admin</a>
   </nav>
 
-  <!-- home page -->
-  <!-- <div class="homePageSection" class="py-5 px-5">
-  <p class="text-dark">This app will enable the user to store, edit and delete their products, if they are have admin privileges. Otherwise all visitors of this app can view the products. </p>
-  </div> -->
-
   <!-- Projects-->
   <div class="home-projects">
     <h2 class="text-dark my-5">Our Projects</h2>
   </div>
     <div class="accordion" id="accordionExample">
   <div class="accordion-item">
-    <h2 class="accordion-header" id="headingOne">
+    <h2 id="headingOne">
       <button id="accordianBtn" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
         <h1 class="accordion-title">KRIS FURER</h1>
       </button>
     </h2>
     <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <h2 class="project-name">Project #1</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
       </div>
       <div class="item1"></div>
-      <div class="item2"></div>
     </div>
   </div>
   <div class="accordion-item">
