--- a/frontEnd/admin.html
+++ b/frontEnd/admin.html
@@ -17,8 +17,8 @@
 
 <body class="container">
   <nav>
-    <h2 class="logo">Logo</h2>
     <h2 class="header-user">Name</h2>
+    <button class="logout-btn" id="logout">Log out</button>
   </nav>
 
 
@@ -132,9 +132,7 @@
     <br><br>
     <button id="deleteproject" name="projectButton" type="submit" class="btn btn-primary rounded-pill">Delete project</button>
   </form>
-  <button id="showPro">
-    show projects
-  </button>
+
 
 
   <!-- Project section::::::::::::::::::::::::::::::::::::::::::::::: -->
