--- a/frontEnd/home.html
+++ b/frontEnd/home.html
@@ -25,6 +25,8 @@
   <div class="home-projects">
     <h2 class="text-dark my-5">Our Projects</h2>
   </div>
+
+  <!-- KRIS section -->
     <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 id="headingOne">
@@ -32,14 +34,24 @@
         <h1 class="accordion-title">KRIS FURER</h1>
       </button>
     </h2>
+
     <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
       <div class="accordion-body">
+        <div class="about">
+          <h2 class="portfolio-name">About Kris</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. Ut enim ad minim veniam, quis nostrud. incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+        </div>
+        <div class="project-section">
         <h2 class="project-name">Project #1</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+        <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       </div>
-      <div class="item1"></div>
+      <div class="item1 mt-5"></div>
+      </div>
     </div>
   </div>
+   </div>
+
+   <!-- AMBAR section -->
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingOne">
       <button id="accordianBtn" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
@@ -48,12 +60,21 @@
     </h2>
     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <div class="about">
+          <h2 class="portfolio-name">About Ambar</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+        </div>
+        <div class="project-section">
+        <h2 class="project-name">Project #1</h2>
+        <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      </div>
+      <div class="item1 mt-5"></div>
     </div>
-    <div class="item1"></div>
-    <div class="item2"></div>
+   </div>
+ </div>
   </div>
-  </div>
+
+  <!-- TOBY section -->
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingOne">
       <button id="accordianBtn" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
@@ -62,13 +83,17 @@
     </h2>
     <div id="collapseThree" class="accordion-collapse collapse " aria-labelledby="headingOne" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <div class="about">
+          <h2 class="portfolio-name">About Toby</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+        </div>
+        <div class="project-section">
+        <h2 class="project-name">Project #1</h2>
+        <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       </div>
-      <div class="item1"></div>
-      <div class="item2"></div>
+      <div class="item1 mt-5"></div>
     </div>
   </div>
-
 </div>
 
   <!-- Project section::::::::::::::::::::::::::::::::::::::::::::::: -->
