--- a/frontEnd/home.html
+++ b/frontEnd/home.html
@@ -14,7 +14,7 @@
   <title>Home</title>
 </head>
 
-<body class="container">
+<body class="container-fluid">
   <!-- nav section -->
   <nav>
     <h2 class="text-dark">Portfolios</h2>
