--- a/frontEnd/admin.html
+++ b/frontEnd/admin.html
@@ -105,26 +105,25 @@
     <form id="updateProjectForm" class="py-5 px-5">
       <h1 class=""> Update project Form </h1> <br><br>
       <div class="row"></div>
-      <label class="mr-5 " for="projectId"> Enter project Id:</label>
-      <input type="text" class="ml-5" id="projectId" name="inputId">
+      <h3 class="oldTitle">Project Title </h3>
       <br><br>
 
       <label class="mr-5" for="a-projectId"> Enter project title </label>
       <!-- Title Input -->
-      <input type="text" class="ml-5" id="projectTitle" name="inputId">
+      <input type="text" class="ml-5" id="upProjectTitle" name="inputId">
       <br><br>
 
       <!-- Description input -->
       <label class="mr-4" for="a-price"> Project Description </label>
-      <input type="text" id="projectDecription" name="projectPrice" class="">
+      <input type="text" id="upProjectDecription" name="projectPrice" class="">
       <br><br>
 
       <!-- url input -->
       <label class="mr-5" for="projectImg"> Enter the image url </label>
-      <input id="projectImg" type="text" name="projectImg">
+      <input id="upProjectImg" type="text" name="projectImg">
       <br><br>
 
-      <button id="updateproject" name="projectButton" type="submit" class="update-btn">Update project</button>
+      <button id="confirmUpdate" name="projectButton" type="submit" class="update-btn">Update project</button>
     </form>
   </div>
 
@@ -138,7 +137,7 @@
 
 
 
-  <!-- Project section::::::::::::::::::::::::::::::::::::::::::::::: -->
+   <!-- Project section::::::::::::::::::::::::::::::::::::::::::::::: -->
   <div class="admin-proj-section">
     <div class="admin-proj-header my-5">
       <h3>Current Projects</h3>
