uploading content template

--- a/frontEnd/home2.html
+++ b/frontEnd/home2.html
@@ -41,8 +41,8 @@
           <h2 class="portfolio-name">About Kris</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. Ut enim ad minim veniam, quis nostrud. incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
         </div>
-      <div id="filler" class="project-section">
-        <div  class="project1">
+      <div class="project-section">
+        <div class="project1">
           <h2 class="project-name">Project #1</h2>
           <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           <div class="item1"></div>
