--- a/frontEnd/home.html
+++ b/frontEnd/home.html
@@ -42,15 +42,15 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. Ut enim ad minim veniam, quis nostrud. incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
         </div>
       <div class="project-section">
-        <div class="project1">
+        <div class="project mb-2">
           <h2 class="project-name">Project #1</h2>
           <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          <div class="item1"></div>
+          <img class="item1 mb-4" src="" alt="">
        </div>
-       <div class="project2">
+       <div class="project">
           <h2 class="project-name">Project #2</h2>
           <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          <div class="item1"></div>
+          <img class="item1" src="" alt="">
        </div>
       </div>
      </div>
@@ -73,17 +73,17 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
         </div>
         <div class="project-section">
-          <div class="project1">
+          <div class="project mb-2">
             <h2 class="project-name">Project #1</h2>
             <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <div class="item1"></div>
+            <img class="item1 mb-4" src="" alt="">
          </div>
-         <div class="project2">
+         <div class="project">
             <h2 class="project-name">Project #2</h2>
             <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <div class="item1"></div>
+            <img class="item1" src="" alt="">
+         </div>
         </div>
-       </div>
       </div>
      </div>
     </div>
@@ -104,17 +104,17 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
         </div>
         <div class="project-section">
-          <div class="project">
+          <div class="project mb-2">
             <h2 class="project-name">Project #1</h2>
             <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <div class="item1"></div>
+            <img class="item1 mb-4" src="" alt="">
          </div>
          <div class="project">
             <h2 class="project-name">Project #2</h2>
             <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <div class="item1"></div>
+            <img class="item1" src="" alt="">
+         </div>
         </div>
-       </div>
       </div>
      </div>
     </div>
