--- a/frontEnd/home.html
+++ b/frontEnd/home.html
@@ -30,7 +30,7 @@
 <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 id="headingOne">
-      <button id="accordianBtn" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+      <button id="accordianBtn" class="accordian-btn" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
         <h1 class="accordion-title mt-2">KRIS FURER</h1>
       </button>
     </h2>
@@ -38,7 +38,7 @@
     <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
       <div class="accordion-body">
         <div class="about">
-          <h2 class="portfolio-name">About Kris</h2>
+          <h2 class="portfolio-name" id="portfolioName">About Kris</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. Ut enim ad minim veniam, quis nostrud. incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
         </div>
       <div class="project-section">
@@ -62,7 +62,7 @@
 <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingOne">
-      <button id="accordianBtn" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+      <button id="accordianBtn" class="accordian-btn" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
         <h1 class="accordion-title  mt-2">AMBAR WILLIAMS</h1>
       </button>
     </h2>
@@ -93,7 +93,7 @@
 <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingOne">
-      <button id="accordianBtn" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+      <button id="accordianBtn" class="accordian-btn" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
         <h1 class="accordion-title  mt-2">TOBY EDGAR</h1>
       </button>
     </h2>
