added projects to home page

--- a/frontEnd/admin.html
+++ b/frontEnd/admin.html
@@ -76,7 +76,7 @@
   <!-- login overlay ends -->
 
 
-  <!-- ::::::::::::::::::::::::::  Add Project  ::::::::::::::::::::::::::::: -->
+  <!-- ::::::::::::::::::::::::::  Add Project  :::::::::::::::::::::::::::: -->
 
   <form id="addProjectForm" class=" py-5 px-5">
     <h1>Add project</h1> <br>
