--- a/frontEnd/home.html
+++ b/frontEnd/home.html
@@ -14,7 +14,7 @@
   <title>Home</title>
 </head>
 
-<body class="container-fluid">
+<body id="home" class="container-fluid">
   <!-- nav section -->
   <nav>
     <h2 class="text-dark">Portfolios</h2>
@@ -41,17 +41,8 @@
           <h2 class="portfolio-name">About Kris</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. Ut enim ad minim veniam, quis nostrud. incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
         </div>
-      <div id="filler" class="project-section">
-        <div  class="project1">
-          <h2 class="project-name">Project #1</h2>
-          <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          <div class="item1"></div>
-       </div>
-       <div class="project2">
-          <h2 class="project-name">Project #2</h2>
-          <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          <div class="item1"></div>
-       </div>
+      <div id="kris" class="project-section">
+
       </div>
      </div>
     </div>
@@ -72,7 +63,7 @@
           <h2 class="portfolio-name">About Ambar</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
         </div>
-        <div class="project-section">
+        <div id="ambar" class="project-section">
           <div class="project1">
             <h2 class="project-name">Project #1</h2>
             <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -103,7 +94,7 @@
           <h2 class="portfolio-name">About Toby</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
         </div>
-        <div class="project-section">
+        <div id="toby" class="project-section">
           <div class="project1">
             <h2 class="project-name">Project #1</h2>
             <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
