--- a/frontEnd/home.html
+++ b/frontEnd/home.html
@@ -14,7 +14,7 @@
   <title>Home</title>
 </head>
 
-<body class="container-fluid">
+<body id="home" class="container-fluid">
   <!-- nav section -->
   <nav>
     <h2 class="text-dark">Portfolios</h2>
@@ -30,7 +30,8 @@
 <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 id="headingOne">
-      <button id="accordianBtn" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+
+      <button id="accordionBtn" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
         <h1 class="accordion-title mt-2">KRIS FURER</h1>
       </button>
     </h2>
@@ -38,20 +39,11 @@
     <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
       <div class="accordion-body">
         <div class="about">
-          <h2 class="portfolio-name">About Kris</h2>
+          <h2 class="portfolio-name" id="portfolioName">About Kris</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. Ut enim ad minim veniam, quis nostrud. incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
         </div>
-      <div class="project-section">
-        <div class="project1">
-          <h2 class="project-name">Project #1</h2>
-          <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          <div class="item1"></div>
-       </div>
-       <div class="project2">
-          <h2 class="project-name">Project #2</h2>
-          <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          <div class="item1"></div>
-       </div>
+      <div id="kris" class="project-section">
+
       </div>
      </div>
     </div>
@@ -62,7 +54,8 @@
 <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingOne">
-      <button id="accordianBtn" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+
+      <button id="accordionBtn" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
         <h1 class="accordion-title  mt-2">AMBAR WILLIAMS</h1>
       </button>
     </h2>
@@ -72,18 +65,18 @@
           <h2 class="portfolio-name">About Ambar</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
         </div>
-        <div class="project-section">
-          <div class="project1">
+        <div id="ambar" class="project-section">
+          <div class="project">
             <h2 class="project-name">Project #1</h2>
             <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <div class="item1"></div>
+            <img class="item1 mb-4" src="" alt="">
          </div>
-         <div class="project2">
+         <div class="project">
             <h2 class="project-name">Project #2</h2>
             <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <div class="item1"></div>
+            <img class="item1" src="" alt="">
+         </div>
         </div>
-       </div>
       </div>
      </div>
     </div>
@@ -93,7 +86,8 @@
 <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingOne">
-      <button id="accordianBtn" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+
+      <button id="accordionBtn" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
         <h1 class="accordion-title  mt-2">TOBY EDGAR</h1>
       </button>
     </h2>
@@ -103,18 +97,18 @@
           <h2 class="portfolio-name">About Toby</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
         </div>
-        <div class="project-section">
-          <div class="project1">
+        <div id="toby" class="project-section">
+          <div class="project">
             <h2 class="project-name">Project #1</h2>
             <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <div class="item1"></div>
+            <img class="item1 mb-4" src="" alt="">
          </div>
-         <div class="project2">
+         <div class="project">
             <h2 class="project-name">Project #2</h2>
             <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <div class="item1"></div>
+            <img class="item1" src="" alt="">
+         </div>
         </div>
-       </div>
       </div>
      </div>
     </div>
